<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_view_movie_cover"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_8_dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8_dp"
            android:layout_marginRight="@dimen/dimen_8_dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/bg_list_alternate_values"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_title"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dimen_4_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:text="@string/movie_plot"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_plot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_marginTop="@dimen/dimen_4_dp"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:layout_weight="1"
                android:background="@color/bg_list_alternate_values"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_imdb"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dimen_4_dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:text="@string/movie_actors"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_actors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_marginTop="@dimen/dimen_4_dp"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/bg_list_alternate_values"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_release"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_released"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_genre"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/bg_list_alternate_values"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_director"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_8_dp"
                android:layout_marginTop="@dimen/dimen_8_dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4_dp"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_8_dp"
                    android:layout_weight=".40"
                    android:text="@string/movie_writer"
                    android:textColor="@color/secondary_color"
                    android:textSize="@dimen/text_14_sp"/>

                <TextView
                    android:id="@+id/text_view_writer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".60"
                    android:textColor="@color/text_values"
                    android:textSize="@dimen/text_14_sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
